Animation Lerp Cont

--- a/Hierarchy/Hierarchy.vcxproj
+++ b/Hierarchy/Hierarchy.vcxproj
@@ -101,6 +101,7 @@
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="HeightMap.h" />
+    <ClInclude Include="Timer.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Resources\ExampleShader.hlsl">
