--- a/Hierarchy/Hierarchy.vcxproj
+++ b/Hierarchy/Hierarchy.vcxproj
@@ -104,6 +104,16 @@
     <ClInclude Include="Timer.h" />
   </ItemGroup>
   <ItemGroup>
+    <CustomBuild Include="Resources\DrawHeightMap.hlsl">
+      <FileType>Document</FileType>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">"$(DXSDK_DIR)Utilities\bin\x86\"fxc.exe  /D MAX_NUM_LIGHTS=4 /T fx_4_0 /Fo "%(Filename).o" "%(FullPath)"</Command>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(Filename).o</Outputs>
+    </CustomBuild>
+    <CustomBuild Include="Resources\DrawShadowCaster.hlsl">
+      <FileType>Document</FileType>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">"$(DXSDK_DIR)Utilities\bin\x86\"fxc.exe  /D MAX_NUM_LIGHTS=4 /T fx_4_0 /Fo "%(Filename).o" "%(FullPath)"</Command>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(Filename).o</Outputs>
+    </CustomBuild>
     <FxCompile Include="Resources\ExampleShader.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Effect</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">4.0</ShaderModel>
